Modified the top two navbars to allow for a modal display due to a modal container that has a fixed or relative position or is within an element with fixed or relative position causing behavior where a modal displays behind the parent containers due to the inherited properties. Mdified the top two navbars to fix a discrepancy in spacing by adding to simple-sidebar.css a navbar-modified-margin-bottom style.

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -14,12 +14,18 @@ ul#anav li {
   border-radius: 0 !important;
   background-color: #c50000;
   border-color: #9a0700;
-  margin-top:50px;
-  height:50px;
+  margin-top: 0px;
+  height: 0px;
 }
 .navbar-student .navbar-brand {
   color: #f4edfb;
   padding-left: 15px;
+}
+.navbar-modified-margin-bottom {
+  position: relative;
+  min-height: 50px;
+  margin-bottom: 0px;
+  border: 1px solid transparent;
 }
 .navbar-student .navbar-brand:hover, .navbar-student .navbar-brand:focus {
   color: #f4edfb;
